--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,9 +177,9 @@ background-color: #49af34;
   margin-right: 10px;
 }
 .form-control {
-  padding: 2px 10px;
+  /*padding: 2px 10px;
   border: 1px solid #aeaeae;
-    font-size: 12px;    
+    font-size: 12px;*/
 }
 .formFooter{
     background-color: #00b1ff;
